multiContainer_complex_k8s/k8s-dev/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    ## this port is port of the service to access from the other object.
    - port: 3000
      ## This port is port of the pod for a service to connect with.
      targetPort: 3000
